Actions
Bug #6077
closedSegmentation faults on trunk after r34788
Bug #6077:
Segmentation faults on trunk after r34788
Description
trunk fails to pass tests due to segmentation fauls, the issue seems to be introduced in r34788 (https://github.com/ruby/ruby/commit/adcb7e9e7b142427c97251fdb6340433f65fe811).
64-bit Linux: https://gist.github.com/7be5c691bcd7a66888d3
32-bit Linux: http://travis-ci.org/#!/ruby/ruby/builds/733119
Builds history on travis-ci.org: http://travis-ci.org/#!/ruby/ruby/builds
Updated by nobu (Nobuyoshi Nakada) over 14 years ago
- Status changed from Open to Closed
- % Done changed from 0 to 100
This issue was solved with changeset r34792.
Michael, thank you for reporting this issue.
Your contribution to Ruby is greatly appreciated.
May Ruby be with you.
- file.c (utime_internal): fix a variable missed to replace.
[ruby-core:42864] [Bug #6077]
Actions