* file.c (utime_internal): fix a variable missed to replace.   [ruby-core:42864] [Bug #6077]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@34792 b2dd03c8-39d4-4d8f-98ff-823fe69b080e